# xml-atlas

./: .gitignore  CMakeLists.txt  Cargo.toml  EnclosureListing.xml  README.md  xa_resources.qrc
.github/workflows/: app_xml_atlas_ci.yml  app_xml_atlas_ubuntu_20.04.yml
XML/: attributes.xml  attributes_long.xml  cdata.xml  comment.xml  doctype.xml  elements_in_line.xml  hello.xml  nested.xml  unique_attributes.xml  unique_subtags.xml
build_util/cmake/: QtSettings.cmake
images/: banner.xcf  dialog.xcf  resources.rc  screenshot_dark.xcf  screenshot_light.xcf  xmlatlas.xcf
qml/: main.qml
qt_ui/: xa_indent_options.ui  xa_tab_options.ui  xa_theme_options.ui  xa_unique_consolidation.ui  xa_window.ui
src/: qml_reloader.cpp  qml_reloader.h  resources.aps  xa_app.cpp  xa_app.h  xa_data.cpp  xa_data.h  xa_editor.cpp  xa_editor.h  xa_find_dialog.cpp  xa_find_dialog.h  xa_hidpi.cpp  xa_hidpi.h  xa_highlighter_xml.cpp  xa_highlighter_xml.h  xa_tableview.cpp  xa_tableview.h  xa_theme.cpp  xa_theme.h  xa_tree_dock.cpp  xa_tree_dock.h  xa_window.cpp  xa_window.h  xa_xml_tree_item.cpp  xa_xml_tree_item.h  xa_xml_tree_model.cpp  xa_xml_tree_model.h  xa_xml_writer.cpp  xa_xml_writer.h  xml_atlas.cpp  xml_atlas_app.cpp  xml_atlas_app.h  xml_atlas_data.cpp  xml_atlas_data.h  xml_atlas_editor.cpp  xml_atlas_editor.h  xml_atlas_qml.cpp  xml_atlas_qml.h
styles/: dark.qss  light.qss
