[package]
name = "xml-atlas"
version = "0.0.0"
authors = ["Gunther Laure <gunther.laure@gmail.com>", "Martin Poniz <martin.poniz@gmail.com>"]
edition = "2021"
publish = false
description = "Qt examples"
license = "GPL-3.0"
repository = "https://github.com/glaure/xml-atlas"

[dependencies]
cpp_core = "0.6.0"
qt_core = "0.5.0"
qt_gui = "0.5.0"
qt_qml = "0.5.0"

[build-dependencies]
qt_ritual_build = "0.5.0"